set image aspect ratio to avoid layout shifting

--- a/h5p-bildetema-words-grid-view/src/components/Word/Word.module.scss
+++ b/h5p-bildetema-words-grid-view/src/components/Word/Word.module.scss
@@ -13,10 +13,12 @@
   width: 100%;
 }
 
-.image_container img {
-  width: 100%;
-}
-
 .word_label {
   font-size: $font-size-24;
+}
+
+.img {
+  object-fit: cover;
+  object-position: center center;
+  width: 100%;
 }
